agrege contenido a index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
 	<h1>Hola Francisco</h1>
 	<h2>Te amo</h2>
+	<div> <nav>
+		<ul>
+			<li>gaha</li>
+			<li>hgasgd</li>
+			<li>sagjdhj</li>
+		</ul>
+	</nav></div>
 </body>
 </html>
