--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 			<li>sagjdhj</li>
 		</ul>
 	</nav></div>
+	<main>Como estas ?</main>
+	<section>Tus gatas comieron?</section>
 </body>
 </html>
